src/objects/FieloAlpha__RedemptionRule__c.object
<CustomObject>
    <customHelpPage>FieloAlpha__RedemptionRuleHelpBackEnd</customHelpPage>
    <description>Arbitrary groups to which members can belong. You can create segments by age, by location, etc.</description>
    <fields>
        <fullName>FieloAlpha__Description__c</fullName>
        <description>A description for this segment.</description>
        <inlineHelpText>Enter a description for this segment.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Order__c</fullName>
        <label>Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>FieloAlpha__Program__c</referenceTo>
        <relationshipLabel>Segments</relationshipLabel>
        <relationshipName>Segments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checking this option will make this segment active.</description>
        <inlineHelpText>Check this option in order to activate this segment.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Segment</label>
    <listViews>
        <fullName>FieloAlpha__All_Segments</fullName>
        <columns>NAME</columns>
        <columns>FieloAlpha__isActive__c</columns>
        <columns>FieloAlpha__Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>FieloAlpha__Program__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Segments</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Segment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Segments</pluralLabel>
    <recordTypes>
        <fullName>FieloAlpha__Dynamic</fullName>
        <active>true</active>
        <description>Once you define the criteria of the segment, when the member performs an operation the system calculates online the member’s segment.</description>
        <label>Dynamic</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloAlpha__Manual</fullName>
        <active>true</active>
        <description>The administrator adds manually members to a segment.</description>
        <label>Manual</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloAlpha__Private</fullName>
        <active>true</active>
        <description>This is the record type that will identify a segment for the logged user</description>
        <label>Private</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloAlpha__Public</fullName>
        <active>true</active>
        <description>This is the record type that will identify a segment for the guest user</description>
        <label>Public</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieloAlpha__ModifyProgram</fullName>
        <active>true</active>
        <description>Is not possible to modify the associated Program</description>
        <errorConditionFormula>ISCHANGED(FieloAlpha__Program__c) &amp;&amp; NOT(ISBLANK(PRIORVALUE(FieloAlpha__Program__c)))</errorConditionFormula>
        <errorDisplayField>FieloAlpha__Program__c</errorDisplayField>
        <errorMessage>Is not possible to modify the associated Program</errorMessage>
    </validationRules>
</CustomObject>